endret på index.html

--- a/eins/index.html
+++ b/eins/index.html
@@ -14,11 +14,11 @@
 
   <body>
 
-    <script src="_Triangle class.js"></script>
-    <script src="_eins array.js"></script>
-    <script src="_grid manager.js"></script>
-  <script src="_keypressed.js"></script>
-  <script src="_sketch.js"></script>
+    <script src="src/_Triangle class.js"></script>
+    <script src="src/_eins array.js"></script>
+    <script src="src/_grid manager.js"></script>
+  <script src="src/_keypressed.js"></script>
+  <script src="src/_sketch.js"></script>
   
   
   </body>
